--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ project/plugins/project/
 project/.sbtserver
 
 *.lock
+
+src/main/resources/MedLineAbstracts100k.xml
+
+src/main/resources/MedLineAbstracts50k.xml
+
+src/main/resources/MedLineAbstracts5k.xml
+
+src/main/resources/MedLineAbstracts.xml
