Added some more event driven messages

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,17 @@
 akka {
   actor {
     provider = "akka.remote.RemoteActorRefProvider"
+    default-dispatcher {
+      throughput = 50
+    }
+    default-mailbox {
+      mailbox-capacity = 100000
+    }
   }
   remote {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
-      hostname = "0.0.0.0"
+      hostname = "129.26.131.7"
       port = 2552
     }
  }
