--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,22 +2,23 @@ akka {
   actor {
     provider = "akka.actor.LocalActorRefProvider"
     default-dispatcher {
-      throughput = 50
+      throughput = 1
     }
     default-mailbox {
-      mailbox-capacity = 10000
+      mailbox-type = "akka.dispatch.SingleConsumerOnlyUnboundedMailbox"
     }
   }
 }
 
+
 docelem-store {
-  broker.uri = "tcp://ashburner:61613"
+  broker.uri = "tcp://draco1:61613"
   broker.usr = "admin"
   broker.pwd = "password"
   broker.queue = "/queue/docelem-store"
   broker.billing = "/topic/billing"
 
-  gate.number = 4
+  gate.number = 1
   timedFlush = false
 
   storage.accumulo = {
