Begin with new schema and abstractions

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -23,9 +23,9 @@ docelem-store {
 
   storage.accumulo = {
     embedded = false
-    instanceName = "ashburner"
-    zooServers = "ashburner:2181"
+    instanceName = "flux"
+    zooServers = "flux:30100"
     user = "root"
-    pwd = "root"
+    pwd = "secret"
   }
 }
