AccumuloFeeder now sends the mutations to accumulo

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -23,7 +23,7 @@ docelem-store {
 
   storage.accumulo = {
     embedded = false
-    instanceName = "flux"
+    instanceName = "accumulo"
     zooServers = "flux:30100"
     user = "root"
     pwd = "secret"
