--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,4 +1,6 @@
 akka {
+  # Options: OFF, ERROR, WARNING, INFO, DEBUG
+  loglevel = "INFO"
   actor {
     provider = "akka.actor.LocalActorRefProvider"
     default-dispatcher {
