Implementing a ExtractSCAIViewAbstracts rule

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,7 +14,7 @@ akka {
 
 
 docelem-store {
-  broker.uri = "tcp://ashburner:61613"
+  broker.uri = "tcp://draco1:61613"
   broker.usr = "admin"
   broker.pwd = "password"
   broker.queue = "/queue/docelem-store"
