--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -17,7 +17,7 @@ docelem-store {
   broker.uri = "tcp://draco1:61613"
   broker.usr = "admin"
   broker.pwd = "password"
-  broker.queue = "/queue/docelem-store"
+  broker.queue = "/queue/docelem-store.dev-sh"
   broker.billing = "/topic/billing"
 
   gate.number = 1
