AccumuloFeeder now imports also raw_data. Optimize memory footprint.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -26,8 +26,8 @@ docelem-store {
   storage.accumulo = {
     embedded = false
     instanceName = "accumulo"
-    zooServers = "flux:30100"
+    zooServers = "timon.scai.fraunhofer.de:2181"
     user = "root"
-    pwd = "secret"
+    pwd = "acc_admin"
   }
 }
