introducing AccumuloXmiScanner for fast scanning of XMIs and delivering via Broker. FIX CasModel uses now JCasUtil to extract Header

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,11 +14,11 @@ akka {
 
 
 docelem-store {
-  broker.uri = "tcp://draco1:61613"
+  broker.uri = "tcp://draco2.scai.fraunhofer.de:61613"
   broker.usr = "admin"
-  broker.pwd = "password"
-  broker.queue = "/queue/docelem-store.dev-sh"
-  broker.billing = "/topic/billing"
+  broker.pwd = "Access2Broker!"
+  broker.queue = "jms.queue.docelem-store"
+  broker.billing = "jms.topic.billing"
 
   gate.number = 1
   timedFlush = false
