added some example doc elem logs. fixed a problem with topology. tables are now read from config. query now both accumulo and the in-memory (esp for examples).

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,16 +2,13 @@ akka {
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
   loglevel = "INFO"
   actor {
-    provider = "akka.actor.LocalActorRefProvider"
-    default-dispatcher {
-      throughput = 1
-    }
-    default-mailbox {
-      mailbox-type = "akka.dispatch.SingleConsumerOnlyUnboundedMailbox"
+    blocking-mailbox {
+      mailbox-type = "akka.dispatch.BoundedMailbox"
+      mailbox-capacity = 100
+      mailbox-push-timeout-time = 60s
     }
   }
 }
-
 
 docelem-store {
   broker.uri = "tcp://draco2.scai.fraunhofer.de:61613"
@@ -29,5 +26,8 @@ docelem-store {
     zooServers = "timon.scai.fraunhofer.de:2181"
     user = "root"
     pwd = "acc_admin"
+    tables.artifacts = "knowledge_artifacts_dev"
+    tables.doc-based-partitioned-index = "semantic_index_dev"
+    tables.topology-index = "topology_index_dev"
   }
 }
