refactored AccumuloFeeder so that it will be more performant

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -4,7 +4,7 @@ akka {
   actor {
     blocking-mailbox {
       mailbox-type = "akka.dispatch.BoundedMailbox"
-      mailbox-capacity = 100
+      mailbox-capacity = 10
       mailbox-push-timeout-time = 60s
     }
   }
@@ -26,8 +26,8 @@ docelem-store {
     zooServers = "timon.scai.fraunhofer.de:2181"
     user = "root"
     pwd = "acc_admin"
-    tables.artifacts = "knowledge_artifacts_dev"
-    tables.doc-based-partitioned-index = "semantic_index_dev"
-    tables.topology-index = "topology_index_dev"
+    tables.artifacts = "knowledge_artifacts_7_4_SNAPSHOT"
+    tables.doc-based-partitioned-index = "semantic_index_7_4_SNAPSHOT"
+    tables.topology-index = "topology_index_7_4_SNAPSHOT"
   }
 }
