Optimized BatchWriterConfig of AccumuloFeeder

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -11,9 +11,9 @@ akka {
 }
 
 docelem-store {
-  broker.uri = "tcp://draco2.scai.fraunhofer.de:61613"
-  broker.usr = "admin"
-  broker.pwd = "Access2Broker!"
+  broker.uri = "tcp://draco1.scai.fraunhofer.de:61613"
+  broker.usr = "scaiview"
+  broker.pwd = "wurmt73'Bonn"
   broker.queue = "jms.queue.docelem-store"
   broker.billing = "jms.topic.billing"
 
