CasModel does now URI/URL encoding

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -10,7 +10,7 @@ akka {
   }
 }
 
-docelem-store {
+docelem-store-old {
   broker.uri = "tcp://draco1.scai.fraunhofer.de:61613"
   broker.usr = "scaiview"
   broker.pwd = "wurmt73'Bonn"
@@ -29,5 +29,27 @@ docelem-store {
     tables.artifacts = "knowledge_artifacts_7_4_SNAPSHOT"
     tables.doc-based-partitioned-index = "semantic_index_7_4_SNAPSHOT"
     tables.topology-index = "topology_index_7_4_SNAPSHOT"
+  }
+}
+
+docelem-store {
+  broker.uri = "tcp://flux.scai.fraunhofer.de:61613"
+  broker.usr = "scaiview"
+  broker.pwd = "wurmt73'Bonn"
+  broker.queue = "jms.queue.docelem-store.dev-sh"
+  broker.billing = "jms.topic.billing"
+
+  gate.number = 1
+  timedFlush = false
+
+  storage.accumulo = {
+    embedded = false
+    instanceName = "accumulo"
+    zooServers = "timon.scai.fraunhofer.de:2181"
+    user = "root"
+    pwd = "acc_admin"
+    tables.artifacts = "knowledge_artifacts_dev2"
+    tables.doc-based-partitioned-index = "semantic_index_dev2"
+    tables.topology-index = "topology_index_dev2"
   }
 }
