New SimpleWalModel reads entire dlogs. Added table for docelem-based semantic index. Now able to choose semantic index for each query. Querys persist corpera now with a simple topology.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -28,6 +28,7 @@ docelem-store-old {
     pwd = "acc_admin"
     tables.artifacts = "knowledge_artifacts_7_4_SNAPSHOT"
     tables.doc-based-partitioned-index = "semantic_index_7_4_SNAPSHOT"
+    tables.elem-based-partitioned-index = "semantic_elem_index_7_4_SNAPSHOT"
     tables.topology-index = "topology_index_7_4_SNAPSHOT"
   }
 }
@@ -50,6 +51,7 @@ docelem-store {
     pwd = "acc_admin"
     tables.artifacts = "knowledge_artifacts_dev2"
     tables.doc-based-partitioned-index = "semantic_index_dev2"
+    tables.elem-based-partitioned-index = "semantic_elem_index_dev2"
     tables.topology-index = "topology_index_dev2"
   }
 }
