--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -10,14 +10,14 @@ akka {
   }
 }
 
-docelem-store-old {
+docelem-store {
   broker.uri = "tcp://draco1.scai.fraunhofer.de:61613"
   broker.usr = "scaiview"
   broker.pwd = "wurmt73'Bonn"
-  broker.queue = "jms.queue.docelem-store"
+  broker.queue = "jms.queue.JProMiner.7.5-SNAPSHOT.scaiview.SNAPSHOT"
   broker.billing = "jms.topic.billing"
 
-  gate.number = 1
+  gate.number = 256
   timedFlush = false
 
   storage.accumulo = {
@@ -26,14 +26,14 @@ docelem-store-old {
     zooServers = "timon.scai.fraunhofer.de:2181"
     user = "root"
     pwd = "acc_admin"
-    tables.artifacts = "knowledge_artifacts_7_4_SNAPSHOT"
-    tables.doc-based-partitioned-index = "semantic_index_7_4_SNAPSHOT"
-    tables.elem-based-partitioned-index = "semantic_elem_index_7_4_SNAPSHOT"
-    tables.topology-index = "topology_index_7_4_SNAPSHOT"
+    tables.artifacts = "knowledge_artifacts_7_5_SNAPSHOT"
+    tables.doc-based-partitioned-index = "semantic_index_7_5_SNAPSHOT"
+    tables.elem-based-partitioned-index = "semantic_elem_index_7_5_SNAPSHOT"
+    tables.topology-index = "topology_index_7_5_SNAPSHOT"
   }
 }
 
-docelem-store {
+docelem-store-new {
   broker.uri = "tcp://flux.scai.fraunhofer.de:61613"
   broker.usr = "scaiview"
   broker.pwd = "wurmt73'Bonn"
