Adding fillExample to configuration

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,10 +14,11 @@ docelem-store {
   broker.uri = "tcp://draco1.scai.fraunhofer.de:61613"
   broker.usr = "scaiview"
   broker.pwd = "wurmt73'Bonn"
-  broker.queue = "jms.queue.JProMiner.7.5-SNAPSHOT.scaiview.SNAPSHOT"
+  broker.queue = "jms.queue.docelem-store"
   broker.billing = "jms.topic.billing"
 
-  gate.number = 256
+  gate.number = 1
+  fillExamples = false
   timedFlush = false
 
   storage.accumulo = {
@@ -26,14 +27,14 @@ docelem-store {
     zooServers = "timon.scai.fraunhofer.de:2181"
     user = "root"
     pwd = "acc_admin"
-    tables.artifacts = "knowledge_artifacts_7_5_SNAPSHOT"
-    tables.doc-based-partitioned-index = "semantic_index_7_5_SNAPSHOT"
-    tables.elem-based-partitioned-index = "semantic_elem_index_7_5_SNAPSHOT"
-    tables.topology-index = "topology_index_7_5_SNAPSHOT"
+    tables.artifacts = "2017_R80_assets"
+    tables.doc-based-partitioned-index = "2017_R80_idx_doc"
+    tables.elem-based-partitioned-index = "2017_R80_idx_elem"
+    tables.topology-index = "2017_R80_idx_topo"
   }
 }
 
-docelem-store-new {
+docelem-store-dev {
   broker.uri = "tcp://flux.scai.fraunhofer.de:61613"
   broker.usr = "scaiview"
   broker.pwd = "wurmt73'Bonn"
@@ -41,6 +42,7 @@ docelem-store-new {
   broker.billing = "jms.topic.billing"
 
   gate.number = 1
+  fillExamples = false
   timedFlush = false
 
   storage.accumulo = {
