Added a AccumuloStatistics program.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 akka {
   # Options: OFF, ERROR, WARNING, INFO, DEBUG
-  loglevel = "INFO"
+  loglevel = "ERROR"
   actor {
     blocking-mailbox {
       mailbox-type = "akka.dispatch.BoundedMailbox"
@@ -14,7 +14,7 @@ docelem-store {
   broker.uri = "tcp://draco1.scai.fraunhofer.de:61613"
   broker.usr = "scaiview"
   broker.pwd = "wurmt73'Bonn"
-  broker.queue = "jms.queue.docelem-store"
+  broker.queue = "jms.queue.docelem-store.DEV"
   broker.billing = "jms.topic.billing"
 
   gate.number = 1
@@ -27,10 +27,10 @@ docelem-store {
     zooServers = "timon.scai.fraunhofer.de:2181"
     user = "root"
     pwd = "acc_admin"
-    tables.artifacts = "2017_R80_assets"
-    tables.doc-based-partitioned-index = "2017_R80_idx_doc"
-    tables.elem-based-partitioned-index = "2017_R80_idx_elem"
-    tables.topology-index = "2017_R80_idx_topo"
+    tables.artifacts = "2017_S81_assets"
+    tables.doc-based-partitioned-index = "2017_S81_idx_doc"
+    tables.elem-based-partitioned-index = "2017_S81_idx_elem"
+    tables.topology-index = "2017_S81_idx_topo"
   }
 }
 
